--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.15.3",
     "hbs": "^4.0.1",
     "jquery": "^3.2.1",
-    "nodemailer": "^4.0.1"
+    "nodemailer": "^4.0.1",
+    "request": "^2.81.0"
   }
 }
