--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "",
+  "engines" : {
+    "node": "6.10.1"
+  },
+  "author": "Ekta Shahani",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.2",
